Apply patch from PR bin/23836  cmp did not correctly parse skip arguments given in hex or octal, as the manpage states it can.